--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,24 @@ h1, h2, h3, h4
 }
 #header > div.row {margin: 0;}
 
+#parallax>.pattern
+{
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background-image: url('../img/pattern.png');
+	background-repeat: repeat;
+}
+
+#parallax>.row
+{
+	
+}
+#parallax>.row>h3 
+{
+	
+}
+
 #header
 {
 	position: relative;
@@ -31,7 +49,7 @@ h1, h2, h3, h4
     overflow: hidden;
 }
 
-#first
+#first, #second
 {
 	position: relative;
     background-color: #FFF;
@@ -88,17 +106,17 @@ h1, h2, h3, h4
     left: 20%;
 }
 
-span.whyimg
+span.whyimg, span.whyimg2
 {
 	display: inline-block;
 }
 
-.whyimg
+.whyimg, .whyimg2
 {
 	text-align: center;
 }
 
-.whyimg>img
+.whyimg>img, .whyimg2>img
 {
 	width: 90%;
     padding: 50px;
@@ -107,7 +125,7 @@ span.whyimg
     margin-bottom: 1em;
 }
 
-#first>p
+#first>p, #second>p
 {
 	padding: 20px 0 20px 25px;
 	margin-top: 50px;
@@ -118,7 +136,7 @@ span.whyimg
 {
 	position: relative;
 	background-image: url('../img/parallax_1.jpg');
-	height: 50vh;
+	height: 500px;
     width: 100%;
     background-repeat: no-repeat;
     background-size: 100%;
@@ -126,15 +144,30 @@ span.whyimg
 
 }
 
-#first>div>span:first-child
+#second>div>span:last-child
 {
-	margin-left:4.15%;
+	margin-top:2em;
 }
 
 @media screen and (max-width:600px) {
 	#header
 	{
 		height: 60vh;
+	}
+
+	#parallax
+	{
+		height: 250px;
+
+	}
+
+	#parallax>.pattern
+	{
+		height: 250px;
+	}
+
+	#parallax>.row>h3 {
+	    font-size: .7em;
 	}
 
 	#nadzagolovok
@@ -152,14 +185,89 @@ span.whyimg
     	font-size: 0.74em;
 	}
 
-	#first>div>span:first-child
-	{
-		margin-left:0;
-	}
-
-	.whyimg>img
+	.whyimg>img, .whyimg2>img
 	{
 		padding: 25px;
 	}
 }
 
+footer
+{
+	position: relative;
+	padding: 2em 0 0em 0;
+	background-color: #292b2c;
+}
+
+footer>div
+{
+	display: inline-block;
+}
+
+#mail
+{
+	color:#FFF;
+	text-align: center;
+}
+
+#mail>h2
+{
+	position: relative;
+	margin-bottom: 1em;
+}
+
+#mail>h2::after
+{
+	content: '';
+    position: absolute;
+    width: 80%;
+    border-bottom: 1px solid #777;
+    bottom: -0.3em;
+    left: 10%;
+}
+
+form>input
+{
+	background-color: #292b2c;
+    color: #FFF;
+    line-height: 2em;
+    font-size: 2em;
+    font-weight: bold;
+    margin-bottom: 1em;
+    border: none;
+    border-bottom: 1.2px solid #777;
+}
+
+form>input:focus
+{
+	border-color: #FFF;
+	outline: none;
+}
+
+::-webkit-input-placeholder {color:#FFF;}
+::-moz-placeholder          {color:#FFF;}/* Firefox 19+ */
+:-moz-placeholder           {color:#FFF;}/* Firefox 18- */
+:-ms-input-placeholder      {color:#FFF;}
+
+form>button
+{
+	background-color: #7f0f39;
+    color: #FFF;
+    text-transform: uppercase;
+    font-size: 1.6em;
+    padding: 0.6em 0.2em;
+    border: none;
+    cursor: pointer;
+}
+form>button:hover
+{
+	background-color: #981848;
+}
+
+footer>p
+{
+	color: #777777;
+    border-top: 1px solid #777;
+    font-size: .7em;
+    text-align: center;
+    padding-bottom: .5em;
+}
