--- a/css/styles.css
+++ b/css/styles.css
@@ -149,46 +149,10 @@ span.whyimg, span.whyimg2
 	margin-top:2em;
 }
 
-@media screen and (max-width:600px) {
-	#header
-	{
-		height: 60vh;
-	}
-
-	#parallax
-	{
-		height: 250px;
-
-	}
-
-	#parallax>.pattern
-	{
-		height: 250px;
-	}
-
-	#parallax>.row>h3 {
-	    font-size: .7em;
-	}
-
-	#nadzagolovok
-	{
-		font-size: 1.8em;
-		background-color: rgba(41, 43, 44, 0.6);
-	}
-
-	#zagolovok {
-	    background-color: rgba(41, 43, 44, 0.6);
-	}
-
-	#podzagolovok
-	{
-    	font-size: 0.74em;
-	}
-
-	.whyimg>img, .whyimg2>img
-	{
-		padding: 25px;
-	}
+#map
+{
+	width:100%;
+	height:606px;
 }
 
 footer
@@ -231,7 +195,6 @@ form>input
     color: #FFF;
     line-height: 2em;
     font-size: 2em;
-    font-weight: bold;
     margin-bottom: 1em;
     border: none;
     border-bottom: 1.2px solid #777;
@@ -270,4 +233,141 @@ footer>p
     font-size: .7em;
     text-align: center;
     padding-bottom: .5em;
+}
+
+@media screen and (max-width:840px) {
+	
+}
+
+@media screen and (max-width:1030px) {
+	#nadzagolovok
+	{
+		font-size: 1.2em;
+	}
+
+	#zagolovok {
+	    font-size: 1.4em;
+	}
+
+	#podzagolovok
+	{
+    	font-size: 0.58em;
+	}
+
+	.whyimg>img, .whyimg2>img
+	{
+    	padding: 5px;
+    }
+
+	form > button
+	{
+		font-size: 1.2em;
+	}
+
+	#map
+	{
+		height:70vh;
+	}
+}
+
+
+@media screen and (max-width: 820px) {}
+
+
+@media screen and (max-width:600px) {
+	#header
+	{
+		height: 60vh;
+	}
+
+	#parallax
+	{
+		height: 250px;
+
+	}
+
+	#parallax>.pattern
+	{
+		height: 250px;
+	}
+
+	#parallax>.row>h3 {
+	    font-size: .7em;
+	}
+
+	#nadzagolovok
+	{
+		font-size: 1.8em;
+	}
+
+	#zagolovok {
+	    font-size: 2em;
+	}
+
+	#podzagolovok
+	{
+    	font-size: 0.74em;
+	}
+
+	.whyimg>img, .whyimg2>img
+	{
+		padding: 25px;
+	}
+
+	.whyimg, .whyimg2
+	{
+		margin-bottom: 2em;
+	}
+	.whyimg>img, .whyimg2>img
+	{
+		margin-bottom: .5em;
+	}
+	#second>div>span:last-child
+	{
+		margin-top: 0;
+	}
+
+	#mail
+	{
+		margin-bottom: 1em;
+	}
+}
+
+@media screen and (max-width:380px) {
+
+	#header
+	{
+	    height: 40vh;
+	}
+
+	#zagolovok {
+	    font-size: 1.3em;
+	}
+
+	form>input
+	{
+    	line-height: 1.6em;
+    	font-size: 1.6em;
+	}
+
+	#map
+	{
+		height:306px;
+	}
+
+	footer > p
+	{
+    	font-size: .5em;
+    }
+
+    #why, #by
+	{
+		font-size: 1.5rem;
+	}
+}
+
+@media screen and (max-width:330px) {
+	#zagolovok {
+	    font-size: 1.2em;
+	}
 }
