--- a/css/styles.css
+++ b/css/styles.css
@@ -118,6 +118,7 @@ span.whyimg, span.whyimg2
 .whyimg, .whyimg2
 {
 	text-align: center;
+	visibility: hidden;
 }
 
 .whyimg>img, .whyimg2>img
@@ -261,10 +262,6 @@ footer>p
 }
 
 
-@media screen and (max-width:840px) {
-	
-}
-
 @media screen and (max-width:1030px) {
 	#nadzagolovok
 	{
@@ -297,11 +294,14 @@ footer>p
 }
 
 
-@media screen and (max-width: 820px) {
+@media screen and (max-width: 840px) {
 	#modal
 	{
 		 padding: 5px;
 	}
+	#nadzagolovok, #zagolovok {
+	    background-color: rgba(41, 43, 44, 0.8);
+	}			
 }
 
 
@@ -349,6 +349,7 @@ footer>p
 	{
 		margin-bottom: 2em;
 	}
+	.whyimg:first-child{visibility: visible}
 	.whyimg>img, .whyimg2>img
 	{
 		margin-bottom: .5em;
